--- a/RegistroEstudiantes.AppMovil/Vistas/ListarEstudiantes.xaml
+++ b/RegistroEstudiantes.AppMovil/Vistas/ListarEstudiantes.xaml
@@ -15,19 +15,20 @@
             </Grid.ColumnDefinitions>
 
             <SearchBar Placeholder="Buscar..."
-                    x:Name="filtroSearchBar"
-                    Grid.Row="0"
-                    Grid.Column="0"
-                    TextChanged="filtroSearchBar_TextChanged"/>
+                       x:Name="filtroSearchBar"
+                       Grid.Row="0"
+                       Grid.Column="0"
+                       TextChanged="filtroSearchBar_TextChanged"/>
             <Button Text="Nuevo Estudiante"
-                 x:Name="NuevoEstudianteBoton"
-                 Grid.Row="0"
-                 Grid.Column="1"
-                 Clicked="NuevoEstudianteBoton_Clicked"/>
-            <CollectionView x:Name="ListaCollection"
-                         ItemsSource="{Binding Lista}"
-                         Grid.Row="1"
-                         Grid.ColumnSpan="2">
+                    x:Name="NuevoEstudianteBoton"
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Clicked="NuevoEstudianteBoton_Clicked"/>
+			
+            <CollectionView x:Name="listaCollection"
+                            ItemsSource="{Binding Lista}"
+                            Grid.Row="1"
+                            Grid.ColumnSpan="2">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <Grid ColumnSpacing="10" Padding="5">
@@ -37,20 +38,40 @@
                             </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
                             <Image Grid.RowSpan="2"
-                                Source="profile.jpg"
-                                Aspect="AspectFill"
-                                HeightRequest="60"
-                                WidthRequest="60"/>
+                                   Source="profile.jpg"
+                                   Aspect="AspectFill"
+                                   HeightRequest="60"
+                                   WidthRequest="60"/>
                             <Label Grid.Column="1"
-                                Grid.Row="0"
-                                Text="{Binding NombreCompleto}"
-                                FontSize="20"/>
+                                   Grid.Row="0"
+                                   Text="{Binding NombreCompleto}"
+                                   FontAttributes="Bold"
+                                   FontSize="20"/>
                             <Label Grid.Column="1"
-                            Grid.Row="1"
-                            Text="{Binding Curso.Nombre}"/>
+                                   Grid.Row="1"
+                                   Text="{Binding Curso.Nombre}"/>
+							<ImageButton x:Name="editarButton"
+                                         Grid.Column="2"
+                                         Source="edit_icon.png"
+                                         BackgroundColor="Transparent"
+                                         HeightRequest="25"
+                                         WidthRequest="25"
+                                         CommandParameter="{Binding .}"
+                                         Clicked="editarButton_Clicked"/>
+							<ImageButton x:Name="deshabilitarButton"
+                                         Grid.Column="3"
+                                         Grid.RowSpan="1"
+                                         Source="disable.png"
+                                         BackgroundColor="Transparent"
+                                         HeightRequest="25"
+                                         WidthRequest="25"
+                                         CommandParameter="{Binding .}"
+                                         Clicked="deshabilitarButton_Clicked"/>
                         </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
